# logl-rs

./: .gitignore  README.md
images/: desktop.files.json
opengl-1/: Cargo.toml
opengl-1/src/: main.rs
opengl-1_1/: README.md
opengl-1_2/: README.md
opengl-1_2-exercise/: README.md
opengl-1_2/src/: main.rs
opengl-1_3/: README.md  desktop.files.json
opengl-1_3-execrise/: README.md
opengl-1_3-execrise/shaders/: fragment.glsl  vertex.glsl
opengl-1_3-execrise/src/: main.rs  shader.rs
opengl-1_3/shaders/: vertex.glsl
opengl-1_3/src/: main.rs
opengl-1_4/: README.md
opengl-1_4-exercise/: README.md
opengl-1_4-exercise/shaders/: fragment.glsl  vertex.glsl
opengl-1_4-exercise/src/: main.rs
opengl-1_4/shaders/: fragment.glsl
opengl-1_4/src/: main.rs  shader.rs
opengl-1_5/: README.md
opengl-1_5-exercise/: README.md
opengl-1_5-exercise/src/: main.rs
opengl-1_5/shaders/: vertex.glsl
opengl-1_5/src/: main.rs  shader.rs
opengl-1_6-exercise/: README.md
opengl-1_6-exercise/src/: main.rs
opengl-1_6/shaders/: fragment.glsl
opengl-1_6/src/: main.rs
opengl-2-exercise/src/: main.rs
