[package]
name = "opengl-1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false